refactor: findProducts 리팩토링